Tightening up controls for the editor.  Allowing click to move scene.  Mouse priority stuff.  Lots of great little things.  Next phase: making a scene picker.
Former-commit-id: 6570003a615c5a2ade36efc8a5df20acc864a88f
Former-commit-id: aeb5f54ecdace2c0fc6fcf9134a4e49e14f61ffb [formerly f8af4835c2f54927c9a9f0d652e66810272ae40a]
Former-commit-id: 9d8c58f3595e5c93e5d2ffd2b41e18974ab23561

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -311,6 +311,7 @@
     <ClInclude Include="Source\Editor\editorDefines.h" />
     <ClInclude Include="Source\Editor\editorFactories.h" />
     <ClInclude Include="Source\Editor\editorPanels.h" />
+    <ClInclude Include="Source\Editor\editorSceneGraphPanel.h" />
     <ClInclude Include="Source\Editor\editorSelection.h" />
     <ClInclude Include="Source\Render\boxaabb.h" />
     <ClInclude Include="Source\Render\Scene\emitter.h" />
