Scene selector initial implementation!
Former-commit-id: 4425ee710c17fd4d66381d8cd5ecb9fc9ce4e3af
Former-commit-id: 5515b67a7cebe9fad86a90f90d4d7f1594dad602 [formerly f7546835e1c1823e4061738fbeeb05af017524ae]
Former-commit-id: d3ac04a5d88b7b18bdf45b29d10831080c4939d2

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="Source\Editor\editorControls.cpp" />
     <ClCompile Include="Source\Editor\editorFactories.cpp" />
     <ClCompile Include="Source\Editor\editorPanels.cpp" />
+    <ClCompile Include="Source\Editor\editorSceneGraphPanel.cpp" />
     <ClCompile Include="Source\Editor\editorSelection.cpp" />
     <ClCompile Include="Source\exampleCode.cpp" />
     <ClCompile Include="Source\Game\game.cpp" />
