Breaking change, refactor.  Sprite and Clipped are done.
Former-commit-id: aa94c1610c2e38cf3be66ba9dc1461b4624d5750

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -217,9 +217,9 @@
     <ClCompile Include="Source\Render\matrix.cpp" />
     <ClCompile Include="Source\Render\points.cpp" />
     <ClCompile Include="Source\Render\render.cpp" />
-    <ClCompile Include="Source\Render\Scene\primitives.cpp" />
-    <ClCompile Include="Source\Render\Scene\rectangle.cpp" />
-    <ClCompile Include="Source\Render\Scene\sliced.cpp" />
+    <ClCompile Include="Source\Render\Scene\drawable.cpp" />
+    <ClCompile Include="Source\Render\Scene\sprite.cpp" />
+    <ClCompile Include="Source\Render\Scene\clickable.cpp" />
     <ClCompile Include="Source\Render\Scene\slider.cpp" />
     <ClCompile Include="Source\Render\Scene\spineMV.cpp" />
     <ClCompile Include="Source\Render\Scene\text.cpp" />
@@ -317,7 +317,7 @@
     <ClInclude Include="Source\Render\boxaabb.h" />
     <ClInclude Include="Source\Render\Scene\emitter.h" />
     <ClInclude Include="Source\Render\Scene\grid.h" />
-    <ClInclude Include="Source\Render\Scene\primitives.h" />
+    <ClInclude Include="Source\Render\Scene\drawable.h" />
     <ClInclude Include="Source\Render\Scene\button.h" />
     <ClInclude Include="Source\Animation\frameSwapper.h" />
     <ClInclude Include="Source\Animation\package.h" />
@@ -333,14 +333,12 @@
     <ClInclude Include="Source\Render\Scene\clipped.h" />
     <ClInclude Include="Source\Render\Scene\package.h" />
     <ClInclude Include="Source\Render\Scene\node.h" />
-    <ClInclude Include="Source\Render\glext.h" />
     <ClInclude Include="Source\Render\matrix.h" />
     <ClInclude Include="Source\Render\package.h" />
     <ClInclude Include="Source\Render\points.h" />
     <ClInclude Include="Source\Render\render.h" />
-    <ClInclude Include="Source\Render\Scene\rectangle.h" />
-    <ClInclude Include="Source\Render\Scene\sceneMessages.hpp" />
-    <ClInclude Include="Source\Render\Scene\sliced.h" />
+    <ClInclude Include="Source\Render\Scene\sprite.h" />
+    <ClInclude Include="Source\Render\Scene\clickable.h" />
     <ClInclude Include="Source\Render\Scene\slider.h" />
     <ClInclude Include="Source\Render\Scene\spineMV.h" />
     <ClInclude Include="Source\Render\Scene\text.h" />
