Large number of improvements to clickable priority, ability to cancel presses, improvements to task, block/unblock for signals, silence to minimize notifications, safer parent notifications.  Bug fixes.
Former-commit-id: a34faea6842a4cb4e0c380a9e7cca1f1e0772909
Former-commit-id: 4bce969a88f7d1aa794678dd70722334756f7c11 [formerly a96faf3ea21cc0a63204dfebe4619a389da9d518]
Former-commit-id: 2d3ed49d12ba2428ac1266859018b1e79cfa2003

--- a/M2tMLibrary.vcxproj
+++ b/M2tMLibrary.vcxproj
@@ -191,6 +191,8 @@
     <ClCompile Include="..\external\spine\spine-c\src\spine\SkinnedMeshAttachment.c" />
     <ClCompile Include="..\external\spine\spine-c\src\spine\Slot.c" />
     <ClCompile Include="..\external\spine\spine-c\src\spine\SlotData.c" />
+    <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp" />
+    <ClCompile Include="Source\ClickerGame\clickerGame.cpp" />
     <ClCompile Include="Source\Editor\editor.cpp" />
     <ClCompile Include="Source\Animation\frameSwapper.cpp" />
     <ClCompile Include="Source\Audio\sound.cpp" />
@@ -202,7 +204,6 @@
     <ClCompile Include="Source\exampleCode.cpp" />
     <ClCompile Include="Source\Game\building.cpp" />
     <ClCompile Include="Source\Game\game.cpp" />
-    <ClCompile Include="Source\Game\pathGrid.cpp" />
     <ClCompile Include="Source\Interface\mouse.cpp" />
     <ClCompile Include="Source\main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">./;./Source</AdditionalIncludeDirectories>
@@ -214,6 +215,7 @@
     <ClCompile Include="Source\Render\Scene\clipped.cpp" />
     <ClCompile Include="Source\Render\Scene\emitter.cpp" />
     <ClCompile Include="Source\Render\Scene\grid.cpp" />
+    <ClCompile Include="Source\Render\Scene\map.cpp" />
     <ClCompile Include="Source\Render\Scene\node.cpp" />
     <ClCompile Include="Source\Render\matrix.cpp" />
     <ClCompile Include="Source\Render\points.cpp" />
@@ -308,6 +310,8 @@
     <ClInclude Include="..\external\spine\spine-c\include\spine\SlotData.h" />
     <ClInclude Include="..\external\spine\spine-c\include\spine\spine.h" />
     <ClInclude Include="..\external\spine\spine-c\src\spine\Json.h" />
+    <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h" />
+    <ClInclude Include="Source\ClickerGame\clickerGame.h" />
     <ClInclude Include="Source\Editor\editor.h" />
     <ClInclude Include="Source\Editor\editorControls.h" />
     <ClInclude Include="Source\Editor\editorDefines.h" />
@@ -328,12 +332,12 @@
     <ClInclude Include="Source\Audio\sound.h" />
     <ClInclude Include="Source\exampleCode.h" />
     <ClInclude Include="Source\Game\game.h" />
-    <ClInclude Include="Source\Game\pathGrid.h" />
     <ClInclude Include="Source\Interface\mouse.h" />
     <ClInclude Include="Source\Interface\package.h" />
     <ClInclude Include="Source\Network\network.h" />
     <ClInclude Include="Source\Network\package.h" />
     <ClInclude Include="Source\Render\Scene\clipped.h" />
+    <ClInclude Include="Source\Render\Scene\map.h" />
     <ClInclude Include="Source\Render\Scene\package.h" />
     <ClInclude Include="Source\Render\Scene\node.h" />
     <ClInclude Include="Source\Render\matrix.h" />
