--- a/M2tMLibrary.vcxproj.filters
+++ b/M2tMLibrary.vcxproj.filters
@@ -41,6 +41,12 @@
     <Filter Include="Source Files\Editor">
       <UniqueIdentifier>{bc2e2e42-7286-4b0a-bdef-60af206310ca}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\ArtificialIntelligence">
+      <UniqueIdentifier>{1b46ac1c-2017-43d3-9a9a-6cf1bbd1b432}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\ClickerGame">
+      <UniqueIdentifier>{f873b108-74e4-4e3a-9e5e-0a0be7c1fe23}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Animation\frameSwapper.cpp">
@@ -72,9 +78,6 @@
     </ClCompile>
     <ClCompile Include="Source\Render\matrix.cpp">
       <Filter>Source Files\Render</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Game\pathGrid.cpp">
-      <Filter>Source Files\Game</Filter>
     </ClCompile>
     <ClCompile Include="Source\Network\network.cpp">
       <Filter>Source Files\Network</Filter>
@@ -230,6 +233,15 @@
     <ClCompile Include="Source\Game\building.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ArtificialIntelligence\pathfinding.cpp">
+      <Filter>Source Files\ArtificialIntelligence</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Render\Scene\map.cpp">
+      <Filter>Source Files\Render\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\ClickerGame\clickerGame.cpp">
+      <Filter>Source Files\ClickerGame</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Animation\frameSwapper.h">
@@ -270,9 +282,6 @@
     </ClInclude>
     <ClInclude Include="Source\Render\matrix.h">
       <Filter>Source Files\Render</Filter>
-    </ClInclude>
-    <ClInclude Include="Source\Game\pathGrid.h">
-      <Filter>Source Files\Game</Filter>
     </ClInclude>
     <ClInclude Include="Source\Network\network.h">
       <Filter>Source Files\Network</Filter>
@@ -604,11 +613,20 @@
     <ClInclude Include="Source\Render\Scene\clickable.h">
       <Filter>Source Files\Render\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Game\building.h">
+      <Filter>Source Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\ArtificialIntelligence\pathfinding.h">
+      <Filter>Source Files\ArtificialIntelligence</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Render\Scene\map.h">
+      <Filter>Source Files\Render\Scene</Filter>
+    </ClInclude>
     <ClInclude Include="Source\Game\gameEditor.h">
       <Filter>Source Files\Game</Filter>
     </ClInclude>
-    <ClInclude Include="Source\Game\building.h">
-      <Filter>Source Files\Game</Filter>
+    <ClInclude Include="Source\ClickerGame\clickerGame.h">
+      <Filter>Source Files\ClickerGame</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
